# mamba-image

./: .gitignore  Makefile  README.md
branches/blackMamba/src/: CMakeLists.txt
branches/blackMamba/src/addons/realtime/: readme.txt  setup.py
branches/blackMamba/src/addons/realtime-linux/: readme.txt  setupRT.py
branches/blackMamba/src/addons/realtime-linux/c/: MBRT_Context.c  MBRT_Display.c  MBRT_Record.c  MBRT_VideoAcq.c  MBRT_VideoAcq_avc.c  MBRT_VideoAcq_v4l.c  MBRT_VideoAcq_v4l2.c  MBRT_error.c
branches/blackMamba/src/addons/realtime-linux/c-linux/: MBRT_error.c  mambaRTApi_loc.h
branches/blackMamba/src/addons/realtime-linux/c-win/: MBRT_Display.cpp  MBRT_VideoAcq.cpp
branches/blackMamba/src/addons/realtime-linux/include/: MBRT_error.h  mambaRTApi.h
branches/blackMamba/src/addons/realtime-linux/include-private/: mambaRTApi_loc.h
branches/blackMamba/src/addons/realtime-linux/python/mambaRealtime/: realtime.py
branches/blackMamba/src/addons/realtime-linux/swig/: mambaRTApi.i
branches/blackMamba/src/addons/realtime-win/: readme.txt  setupRT.py
branches/blackMamba/src/addons/realtime-win/c/: MBRT_VideoAcq_dshow.cpp
branches/blackMamba/src/addons/realtime-win/c-win/: MBRT_Context.cpp  MBRT_Record.cpp  MBRT_VideoAcq_avc.cpp  MBRT_error.cpp  mambaRTApi_loc.h
branches/blackMamba/src/addons/realtime-win/include/: MBRT_error.h  mambaRTApi.h
branches/blackMamba/src/addons/realtime-win/python/mambaRealtime/: realtime.py
branches/blackMamba/src/addons/realtime-win/swig/: mambaRTApi.i
branches/blackMamba/src/addons/realtime/c-linux/: MBRT_Context.c  MBRT_Display.c  MBRT_Record.c  MBRT_VideoAcq.c  MBRT_VideoAcq_v4l2.c  MBRT_error.c  mambaRTApi_loc.h
branches/blackMamba/src/addons/realtime/c-win/: MBRT_Context.cpp  MBRT_Display.cpp  MBRT_Record.cpp  MBRT_VideoAcq.cpp  MBRT_VideoAcq_avc.cpp  MBRT_VideoAcq_dshow.cpp  MBRT_error.cpp  mambaRTApi_loc.h
branches/blackMamba/src/addons/realtime/include/: mambaRTApi.h
branches/blackMamba/src/addons/realtime/python/mambaRealtime/: realtime.py
branches/blackMamba/src/addons/realtime/swig/: mambaRTApi.i
branches/blackMamba/src/c-openCL/: Makefile  encapsulateCL.py  setupPL.py
branches/blackMamba/src/c-openCL/c/: MBPL_Add.c  MBPL_And.c  MBPL_ConSet.c  MBPL_Context.c  MBPL_Copy.c  MBPL_Create.c  MBPL_Inf.c  MBPL_InfNb8.c  MBPL_Kernels.c  MBPL_LoadExtract.c  MBPL_Transfer.c  MBPL_Utils.c  MBPL_Volume.c  MBPL_error.c
branches/blackMamba/src/c-openCL/cl/: MBPL_Add.cl  MBPL_And.cl  MBPL_ConSet.cl  MBPL_Inf.cl  MBPL_InfNb8.cl  gendef.cl
branches/blackMamba/src/c-openCL/include/: MBPL_error.h  mambaPLApi.h
branches/blackMamba/src/c-openCL/include-private/: mambaPLApi_loc.h
branches/blackMamba/src/c-openCL/python/mambaParallel/: __init__.py  parallel.py
branches/blackMamba/src/c-openCL/swig/: mambaPLApi.i
branches/blackMamba/src/c-std/: MB3D_Basins.c  MB3D_Basins32.c  MB3D_Basins8.c  MB3D_Convert.c  MB3D_Create.c  MB3D_Distanceb.c  MB3D_HierarBld.c  MB3D_HierarBld32.c  MB3D_HierarBld8.c  MB3D_HierarDualBld.c  MB3D_HierarDualBld32.c  MB3D_HierarDualBld8.c  MB3D_Label.c  MB3D_Label32.c  MB3D_Label8.c  MB3D_Labelb.c  MB3D_Watershed.c  MB3D_Watershed32.c  MB3D_Watershed8.c  MB_Add.c  MB_And.c  MB_Basins.c  MB_Basins32.c  MB_Basins8.c  MB_BinHitOrMiss.c  MB_BldNb.c  MB_BldNb32.c  MB_BldNb8.c  MB_BldNbb.c  MB_Check.c  MB_Compare.c  MB_ConAdd.c  MB_ConDiv.c  MB_ConMul.c  MB_ConSet.c  MB_ConSub.c  MB_Convert.c  MB_Copy.c  MB_CopyBitPlane.c  MB_CopyBytePlane.c  (+82 more)
branches/blackMamba/src/include/mamba/: MB_Api.h  MB_Api_3D.h  MB_Api_neighbors.h  MB_Common.h  MB_Error.h  MB_Image.h
branches/blackMamba/src/python/: setup.py
doc/: Makefile  generateDoc.bat
doc/mamba-cref/: Makefile  mamba.cfg  mambaApiRef.tex
doc/mamba-examples/: Makefile  examples2html.py  examples2tex.py
doc/mamba-ics/: mamba-ics.tex
doc/mamba-pyref/: Makefile  createPythonQuickRef.py  createPythonRef.py
doc/mamba-um/: Makefile  mamba-um.tex
doc/mambaRT-pyref/: Makefile  createPythonRTRef.py
doc/style/: mamba.sty
src/c-std/: MB3D_Basins.c  MB3D_Basins32.c  MB3D_Basins8.c  MB3D_Convert.c  MB3D_Create.c  MB3D_Distanceb.c  MB3D_HierarBld.c  MB3D_HierarBld32.c  MB3D_HierarBld8.c  MB3D_HierarDualBld.c  MB3D_HierarDualBld32.c  MB3D_HierarDualBld8.c  MB3D_Label.c  MB3D_Label32.c  MB3D_Label8.c  MB3D_Labelb.c  MB3D_Watershed.c  MB3D_Watershed32.c  MB3D_Watershed8.c  MB_Add.c  MB_Basins.c  MB_Basins32.c  MB_Basins8.c  MB_BinHitOrMiss.c  MB_BldDirection.h  MB_BldNb32.c  MB_BldNb8.c  MB_BldNbb.c  MB_Check.c  MB_Compare.c  MB_ConAdd.c  MB_ConDiv.c  MB_ConMul.c  MB_ConSet.c  MB_ConSub.c  MB_Convert.c  MB_Copy.c  MB_CopyBitPlane.c  MB_CopyBytePlane.c  MB_Create.c  (+80 more)
src/python/: setup.py
test/: Makefile  runTest.py
test/testmamba/: testArithmetic.py  testCheck.py  testConDiv.py  testConSet.py  testCopy.py  testDiff.py  testDistanceb.py  testDiv.py  testErodilLarge.py  testExtrema.py  testHierarBld.py  testHierarDualBld.py  testHierarchies.py  testHisto.py  testInf.py  testInfFarNb.py  testLabellings.py  testMiscellaneous.py  testOpenClose.py  testPixel.py  testRange.py  testResidues.py  testShift.py  testShiftVector.py  testStatistic.py  testSub.py  testSup.py  testSupFarNb.py  testSupMask.py  testThinthick.py  (+1 more)
(+247 files in other folders)
